--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de CP</title>
+    <title>Buscador de CP y Calculadora de Logística</title>
     <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS para el estilo -->
 </head>
 <body>
@@ -39,6 +39,20 @@
                 <!-- Resultados de la búsqueda aparecerán aquí -->
             </tbody>
         </table>
+
+        <!-- Calculadora de logística -->
+        <div class="calculator-box">
+            <h2>Calculadora de Costo de Logística</h2>
+            <label for="cantidadCajas">Cantidad de Cajas:</label>
+            <input type="number" id="cantidadCajas" placeholder="Cantidad de cajas" min="1">
+
+            <label for="pesoPorCaja">Peso por Caja (KG):</label>
+            <input type="number" id="pesoPorCaja" placeholder="Peso en KG" min="0.1" step="0.1">
+
+            <button onclick="calcularCosto()">Calcular Costo</button>
+
+            <p id="costoTotal">Costo total: $0</p>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
