--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Buscador de Código Postal (CP)</h1>
+        <h1>Buscador de Código Postal (CP) y Calculadora de Logística</h1>
+        
+        <!-- Buscador de CP -->
         <div class="search-box">
             <input type="text" id="searchText" placeholder="Ingresa el CP">
             <button onclick="buscar()">Buscar</button>
@@ -45,9 +47,11 @@
             <h2>Calculadora de Costo de Logística</h2>
             <label for="cantidadCajas">Cantidad de Cajas:</label>
             <input type="number" id="cantidadCajas" placeholder="Cantidad de cajas" min="1">
+            <button onclick="generarCamposPeso()">Generar Campos de Peso</button>
 
-            <label for="pesoPorCaja">Peso por Caja (KG):</label>
-            <input type="number" id="pesoPorCaja" placeholder="Peso en KG" min="0.1" step="0.1">
+            <div id="pesosCajas">
+                <!-- Aquí se generarán los campos de peso para cada caja -->
+            </div>
 
             <button onclick="calcularCosto()">Calcular Costo</button>
 
