Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de CP y Calculadora de Logística</title>
+    <title>Calculadora de Costos Logísticos</title>
     <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS con estilos actualizados -->
 </head>
 <body>
     <div class="container">
-        <h1>Buscador de Código Postal (CP) y Calculadora de Logística</h1>
+        <h1>Calculadora de Costos Logísticos</h1>
         
         <!-- Buscador de CP -->
         <div class="search-box">
@@ -46,7 +46,6 @@
 
         <!-- Calculadora de logística -->
         <div class="calculator-box">
-            <h2>Calculadora de Costo de Logística</h2>
             <label for="cantidadCajas">Cantidad de Cajas:</label>
             <input type="number" id="cantidadCajas" placeholder="Cantidad de cajas" min="1">
             <button onclick="generarCamposPeso()">Generar Campos de Peso</button>
