--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Costos Logísticos</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS con animaciones -->
+    <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS con estilos actualizados -->
 </head>
 <body>
     <div class="container">
-        <h1>Registro de Series</h1>
+        <h1>Calculadora de Costos Logísticos</h1>
         
         <!-- Buscador de CP -->
         <div class="search-box">
-            <label for="codigoProducto" style="color: #b0b0b0;">Ingresar código de producto</label>
-            <input type="text" id="codigoProducto" placeholder="Código de producto">
-            <button onclick="buscar()">Aceptar</button>
-            <button class="regresar">Regresar</button>
+            <input type="text" id="searchText" placeholder="Ingresa el CP">
+            <button onclick="buscar()">Buscar</button>
         </div>
 
         <!-- Loader -->
