--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <th>Municipio</th>
                         <th>Colonia</th>
                         <th>Zona</th>
-                        <th>Caja 1 KG</th>
+                        <th>Costo Caja</th> <!-- Cambio realizado aquí -->
                         <th>Costo por kilo adicional</th>
                         <th>Palet</th>
                     </tr>
